added new service with its api
postman request PATCH 'http://localhost:8080/auth/{{userId}}/status' \
  --header 'Content-Type: application/json' \
  --header 'Authorization: Bearer {{accessToken}}' \
  --header 'Cookie: JSESSIONID=0E77EB58A7C4F861C32E845CD4A914A7' \
  --body '{
    "isActive": true
}' \