@@ -1,19 +1,23 @@
 package com.auctions.auth_service.security;
 
 import com.auctions.auth_service.util.JwtUtil;
+
+import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+//import jakarta.validation.constraints.AssertFalse.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.*;
 
 @Component
 @RequiredArgsConstructor
@@ -40,11 +44,14 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         boolean valid = jwtUtil.validateAccessToken(token);
 
         if (valid) {
+        	
+        	Claims claims = jwtUtil.extractClaims(token);
 
             String email = jwtUtil.extractEmail(token);
+            String role = claims.get("role", String.class);
 
             UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                    new UsernamePasswordAuthenticationToken(email, null, List.of(new SimpleGrantedAuthority("ROLE_" + role)));
 
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
